--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -1,21 +1,28 @@
+// /!**!\
+//   !** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss *!
+//   ***/
+
 body {
     background-color: blue;
 }
 
-
 #stock-input {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    margin: auto;
-    width: 400px;
-    height: 50px;
-    border-radius: 20px;
-    background-color: rgb(55, 48, 48);
-    background-color: rgb(26, 26, 170);
-    margin-top: 30px;
-    padding: 5px;
-    padding-inline-start: 50px;
-    font-size: 30px;
-    color: white;
-}  
+    background-color: blue;
+}
+
+// #stock-input {
+//     display: flex;
+//     justify-content: center;
+//     align-content: center;
+//     margin: auto;
+//     width: 400px;
+//     height: 50px;
+//     border-radius: 20px;
+//     background-color: rgb(55, 48, 48);
+//     background-color: rgb(26, 26, 170);
+//     margin-top: 30px;
+//     padding: 5px;
+//     padding-inline-start: 50px;
+//     font-size: 30px;
+//     color: white;
+// }  
