--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 // @import "./styles/example.scss"
 
-body {
-    background-color: blue;
-}
+// body {
+//     background-color: blue;
+// }
 
-#stock-input {
-    background-color: blue;
-}
+// #stock-input {
+//     background-color: ;
+// }
