able to toggle between both graphs without making multiple api calls

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+header {
+    max-height: 50px;
+    background-color: antiquewhite;
+}
 body {
     /* background-color: rgb(255, 229, 180); */
     margin: 0;
@@ -8,7 +12,7 @@ body {
     /* height: 100%; */
  
 }
-.wrapper {
+.search-wrapper {
     max-width: 450px;
     margin: 150px auto;
 }
@@ -17,7 +21,7 @@ body {
     position: relative;
     background-color: white;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 #stock-input {
     /* display: flex;
@@ -36,7 +40,7 @@ body {
     color: white; */
     height: 55px; 
     width: 100%;
-    border-radius: 5px;
+    border-radius: 20px;
     padding: 0 60px 0 20px;
     font-size: 18px;
 
