--- a/src/main.css
+++ b/src/main.css
@@ -27,28 +27,59 @@ body {
     border-radius: 20px;
     z-index: 1;
 }
-#stock-input {
-    /* display: flex;
-    justify-content: center;
-    align-content: center;
-    margin: auto;
-    width: 400px;
-    height: 50px;
+
+.stock-options {
     border-radius: 20px;
-    background-color: rgb(55, 48, 48);
-    background-color: rgb(26, 26, 170);
-    margin-top: 30px;
-    padding: 5px;
-    padding-inline-start: 50px;
-    font-size: 30px;
-    color: white; */
-    height: 55px; 
+}
+#stock-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+  }
+  
+  #stock-list li {
+    padding: 10px;
+    border: 1px solid rgb(204, 203, 203);
+  }
+  
+  #stock-list li:hover {
+    background-color: #e5e5e5;
+  }
+  
+  #stock-input {
+    height: 55px;
     width: 100%;
     border-radius: 20px;
     padding: 0 60px 0 20px;
     font-size: 18px;
+    position: relative;
+    transition: border-color 0.3s, box-shadow 0.3s;
+  }
+  
+  #stock-input::after {
+    content: "";
+    position: absolute;
+    bottom: -1px; /* Adjust the bottom position */
+    left: 20px;
+    width: calc(100% - 40px);
+    height: 1px;
+    background-color: #888888;
+    transform: scaleX(0);
+    transition: transform 0.3s;
+  }
+  
+  #stock-input.active {
+    border-color: #888888;
+  }
+  
+  #stock-input.active::after {
+    transform: scaleX(1);
+  }
+  
+      
 
-} 
 
 .graph-container {
     width: 50%;
@@ -58,4 +89,8 @@ body {
 
 #graph {
     background-color: white;
+}
+
+.timeFrameButton {
+    display: none;
 }
