--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,7 @@ body {
  
 }
 
-.curtain {
+/* .curtain {
   z-index: 7;
 }
 
@@ -24,7 +24,7 @@ body {
   background-color: rgb(248, 203, 121);
   animation: leftSlide 2s ease-in-out forwards paused;
   z-index: 7;
-  /* animation-play-state: running; */
+  animation-play-state: running;
 }
 
 .right-side {
@@ -36,7 +36,7 @@ body {
   background-color: rgb(248, 203, 121);
   animation: rightSlide 2s ease-in-out forwards paused;
   z-index: 7;
-  /* animation-play-state: running; */
+  animation-play-state: running;
 }
 
 @keyframes leftSlide {
@@ -47,21 +47,27 @@ body {
 @keyframes rightSlide {
   0% { transform: translateX(0); }
   100% { transform: translateX(100%); }
-}
+} */
 
 
 .container {
-  position: relative;
+  position: fixed;
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
-  margin-top: -50px;
-  margin-left: 70px;
+  /* margin-top: -70px; */
+  top:0;
+  left: 0;
+  /* margin-left: 70px; */
+  width: 100%;
   height: 100vh;
   padding: 0%;
   z-index: 10;
   animation: containerSlide 2s ease-in-out forwards paused;
+  border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.7);
   /* animation-play-state: paused; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @keyframes containerSlide {
@@ -69,16 +75,20 @@ body {
   100% { transform: translateY(-100%); }
 }
 
-.container img {
+/* .container img {
   display: flex;
   height: 400px;
   margin-top: 200px;
   margin-left: 100px;
   padding: 25px;
-}
+} */
 .container p {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 500;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; 
+  font-family: Arial, Helvetica, sans-serif; */
+  font-weight: 400;
+  font-size: 20px;
+  padding: 15px;
+  color: rgb(12, 13, 14);
 }
 
 .box {
@@ -94,13 +104,6 @@ body {
   width: 100%;
 }
 
-p {
-  font-size: 18px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  padding: 15px;
-  color: rgb(12, 13, 14);
-
-}
 .start-button {
   position: absolute; /* position relative to .box */
   bottom: 0; 
@@ -118,14 +121,35 @@ button {
   color: rgb(62, 64, 70);
   cursor: pointer;
 }
+
+/* ------------------------------------------------------ */
+header {
+  /* border: 1px solid black;  */
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+header p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* padding-right: 10px; */
+}
 .logo-container {
-  position: absolute;
+  /* position: absolute;
   top: 10px;
   left: 10px;
   margin-left: 10px;
   display: flex;
-  align-items: center;
-  z-index: 2;
+  align-items: center;  */
+  /* z-index: 2;  */
+  border: 1px solid black;
 }
 
 .logo {
@@ -134,18 +158,20 @@ button {
 }
 
 .company-name {
-  margin-left: 10px; /* Adjust the margin as needed */
-  font-size: 50px; /* Adjust the font size as needed */
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  /* margin-left: 10px;  */
+  /* margin-top: -7px; */
+  font-size: 50px; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgb(142, 141, 141);
   /* color: rgb(248, 93, 93); */
 }
 .search-wrapper {
+    /* border: 1px solid black; */
     max-width: 450px;
     margin: 150px auto;
     border: none;
-    z-index: 2;
-    margin-top: -600px;
+    /* z-index: 999; */
+    /* margin-top: -600px; */
 }
 
 .stock-search-bar {
@@ -154,7 +180,7 @@ button {
 
     width: 100%;
     border-radius: 20px;
-    z-index: 1;
+    /* z-index: 999; */
     border: none;
 }
 
