--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,13 @@
-
 body {
-    /* background-color: rgb(255, 229, 180); */
-    /* /* margin: 0; */
-    /* padding: 0; */
-    background-color: rgb(255, 229, 180);
-    /* background-size: 50% auto; */
-    /* z-index: 1; */
+  /* background-color: rgb(255, 229, 180); */
+  /* /* margin: 0; */
+  /* padding: 0; */
+  background-color: rgb(255, 229, 180);
+  /* background-size: 50% auto; */
+  /* z-index: 1; */
 
-    /* height: 100%; */
- 
+  /* height: 100%; */
+
 }
 
 /* .curtain {
@@ -56,7 +55,7 @@ body {
   justify-content: center;
   align-items: center;
   /* margin-top: -70px; */
-  top:0;
+  top: 0;
   left: 0;
   /* margin-left: 70px; */
   width: 100%;
@@ -71,8 +70,13 @@ body {
 }
 
 @keyframes containerSlide {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-100%); }
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(-100%);
+  }
 }
 
 /* .container img {
@@ -105,9 +109,10 @@ body {
 }
 
 .start-button {
-  position: absolute; /* position relative to .box */
-  bottom: 0; 
-  right: 0; 
+  position: absolute;
+  /* position relative to .box */
+  bottom: 0;
+  right: 0;
   padding: 10px;
 }
 
@@ -141,6 +146,7 @@ header p {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* padding-right: 10px; */
 }
+
 .logo-container {
   /* position: absolute;
   top: 10px;
@@ -160,117 +166,142 @@ header p {
 .company-name {
   /* margin-left: 10px;  */
   /* margin-top: -7px; */
-  font-size: 50px; 
+  font-size: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgb(142, 141, 141);
   /* color: rgb(248, 93, 93); */
 }
+
 .search-wrapper {
-    /* border: 1px solid black; */
-    max-width: 450px;
-    margin: 150px auto;
-    border: none;
-    /* z-index: 999; */
-    /* margin-top: -600px; */
+  /* border: 1px solid black; */
+  max-width: 450px;
+  margin: 150px auto;
+  border: none;
+  /* z-index: 999; */
+  /* margin-top: -600px; */
 }
 
 .stock-search-bar {
-    position: relative;
-    background-color: rgba(255,255,255,.1);
+  position: relative;
+  background-color: rgba(255, 255, 255, .1);
 
-    width: 100%;
-    border-radius: 20px;
-    /* z-index: 999; */
-    border: none;
+  width: 100%;
+  border-radius: 20px;
+  /* z-index: 999; */
+  border: none;
 }
 
 .stock-options {
-    margin-top: 10px;
-    /* padding: ; */
-    border-radius: 20px;
-    border: none;
+  margin-top: 10px;
+  /* padding: ; */
+  border-radius: 20px;
+  border: none;
 }
+
 #stock-list {
-    list-style-type: none;
-    padding: auto;
-    margin-top: 10px;
-    border-radius: 20px;
-    background-color: rgba(255,255,255,.4);
-  }
-  
-  #stock-list li {
-    padding: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
-    /* border: 1px solid rgb(113, 43, 43); */
-  }
-  
-  #stock-list li:hover {
-    background-color: #e5e5e5;
-  }
-  
-  #stock-input {
-    height: 55px;
-    width: 100%;
-    border-radius: 20px;
-    padding: 0 60px 0 20px;
-    font-size: 18px;
-    position: relative;
-    transition: border-color 0.3s, box-shadow 0.3s;
-    border: none;
-    background-color: rgba(255,255,255,.5);
-  }
-  
-  #stock-input::after {
-    content: "";
-    position: absolute;
-    bottom: -1px; /* Adjust the bottom position */
-    left: 20px;
-    width: calc(100% - 40px);
-    height: 1px;
-    background-color: #441e1e;
-    transform: scaleX(0);
-    transition: transform 0.3s;
-  }
-  
-  #stock-input.active {
-    border-color: #888888;
-  }
-  
-  #stock-input.active::after {
-    transform: scaleX(1);
-  }
-  
-      
-.graph-container {
-    display: static;
-    width: 50%;
-    margin-top: -20px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    position: static;
+  display:flex;
+  flex-direction: column;
+  align-items:flex-start;
+  list-style-type: none;
+  padding: auto;
+  margin-top: 10px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, .4);
+  /* border: 1px solid black; */
 }
+
+#stock-list li {
+  padding: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  width: 100%;
+  margin-left: -40px;
+  border-radius: 20px;
+  /* border: 1px solid rgb(113, 43, 43); */
+}
+
+#stock-list li:hover {
+  background-color: #e5e5e5;
+}
+
+#stock-input {
+  height: 55px;
+  width: 100%;
+  border-radius: 20px;
+  padding: 0 60px 0 20px;
+  font-size: 18px;
+  position: relative;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  border: none;
+  background-color: rgba(255, 255, 255, .5);
+}
+
+#stock-input::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  /* Adjust the bottom position */
+  left: 20px;
+  width: calc(100% - 40px);
+  height: 1px;
+  background-color: #441e1e;
+  transform: scaleX(0);
+  transition: transform 0.3s;
+}
+
+#stock-input.active {
+  border-color: #888888;
+}
+
+#stock-input.active::after {
+  transform: scaleX(1);
+}
+
+/* -------------------------------------------------- */
+#main-body-container {
+  /* display: flex; */
+  position: fixed;
+  flex-direction: row;
+  border: 1px solid black;
+  width: 80%;
+}
+
+#main-body-left {
+  width: 50%;
+  border: 1px solid black;
+}
+.graph-container {
+  display: static;
+  width: 50%;
+  margin-top: -20px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  position: static;
+}
+
 .button-container {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 }
+
 #graph {
-    background-color: white;
-    border-radius: 0 0 10px 10px;
+  display: block;
+  background-color: white;
+  border-radius: 0 0 10px 10px;
 }
 
 .timeFrameButton {
-    display: none;
-    height: 50px;
-    width: 150px;
-    background-color: rgb(249, 166, 166);
-    border: none;
-    border-radius: 10px 35px 0 0;
-    color: white;
-    font-weight: 800;
+  display: none;
+  height: 50px;
+  width: 150px;
+  background-color: rgb(249, 166, 166);
+  border: none;
+  border-radius: 10px 35px 0 0;
+  color: white;
+  font-weight: 800;
 }
 
 .timeFrameButton.active {
