--- a/src/main.css
+++ b/src/main.css
@@ -178,7 +178,7 @@ header p {
   margin: 150px auto;
   border: none;
   /* z-index: 999; */
-  /* margin-top: -600px; */
+  margin-top: 40px;
 }
 
 .stock-search-bar {
@@ -262,24 +262,25 @@ header p {
   /* display: flex; */
   position: fixed;
   flex-direction: row;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 80%;
 }
 
 #main-body-left {
   width: 50%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 .graph-container {
   display: static;
   width: 50%;
-  margin-top: -20px;
+  margin-top: -40px;
   margin-left: auto;
   margin-right: auto;
   z-index: 1;
   display: flex;
   flex-direction: column;
   position: static;
+  /* border: 1px solid black; */
 }
 
 .button-container {
@@ -312,4 +313,58 @@ header p {
   background-color: #9a9999;
   transform: scale(1.05);
   cursor: pointer;
+}
+
+
+
+/* ------------------------------ */
+#modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  /* border: 1px solid black; */
+}
+
+#modal-overlay {
+  /* border: 1px solid black; */
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-end;
+  align-items:flex-start;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  /* background-color: rgba(0, 0, 0, 0.2);  */
+}
+
+#modal-content {
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 24px;
+  width: 25%;
+  height: 17%;
+  margin-top: 5%;
+  margin-right: 2%;
+  /* margin-top: -80px; */
+  /* background-color: rgba(255, 255, 255, .4); */
+  background-color: white;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  z-index: 6;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#notice-to-user:hover {
+  cursor: pointer;
+  font-weight: 500;
 }
